--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">lasagna</a>
-        <p><img src="./images/image.webp" alt="lasagna image"></p>
+        <h1><center>ODIN RECIPES</h1></center>
+        <h2><center><em>Lasagna</em></h2></center>
+        <p><center><img src="./images/image.webp" alt="lasagna image"></center></p>
+        <h3>Lasagna Pasta</h3>
         <p>Lasagne is actually a form of pasta itself. It is a traditional Italian dish made with layers of pasta, meat or vegetables, and cheese, typically served with a tomato-based sauce.</p>
-        
+        <h3>Ingredients</h3>
+        <ul>
+            <li><strong>Meat:</strong> This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
+            <li><strong>Onion and garlic:</strong> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
+            <li><strong>Tomato products:</strong> You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+            <li><strong>Sugar:</strong> Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
+            <li><strong>Spices and seasonings:</strong> This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
+            <li><strong>Lasagna noodles:</strong> Use store-bought or homemade lasagna noodles</li>
+            <li><strong>Cheeses:</strong> Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
+            <li><strong>Egg:</strong> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+            <li><a href="https://www.simplyrecipes.com/recipes/lasagna/">Check another reciepe here</a></li>
+        </ul>
 
     </body>
 </html>
